Fixes cellshifter position in freeze panes vaadin/spreadsheet#17088

--- a/vaadin-spreadsheet-flow-parent/vaadin-spreadsheet/src/main/webapp/VAADIN/addons/spreadsheet/_spreadsheet-legacy.scss
+++ b/vaadin-spreadsheet-flow-parent/vaadin-spreadsheet/src/main/webapp/VAADIN/addons/spreadsheet/_spreadsheet-legacy.scss
@@ -289,10 +289,6 @@ $cell-comment-border-color: #A7A7A7 !default;
 				margin-left: 50px;
 			}
 			
-			.s-paint {
-				margin-left: 49px;
-			}
-			
 			.sheet-selection {
 				margin-left: 51px;
 			}
@@ -318,11 +314,6 @@ $cell-comment-border-color: #A7A7A7 !default;
 				margin-left: 50px;
 			}
 			
-			.s-paint {
-				margin-top: 26px;
-				margin-left: 49px;
-			}
-			
 			.sheet-selection {
 				margin-top: 28px;
 				margin-left: 51px;
@@ -341,10 +332,6 @@ $cell-comment-border-color: #A7A7A7 !default;
 			
 			.cell, .sheet-image {
 				margin-top: 27px;
-			}
-			
-			.s-paint {
-				margin-top: 26px;
 			}
 			
 			.sheet-selection {
